# clang-tool-out-of-tree

./: CMakeLists.txt  README.md
src/: SimpleClangCheck.cpp
